--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "^6.2",
-        "guzzlehttp/oauth-subscriber": "0.3.*"
+        "php": ">=8.0",
+        "guzzlehttp/guzzle": "^7.4",
+        "guzzlehttp/oauth-subscriber": "^0.6"
     },
     "autoload": {
         "psr-4": {
